data/issues_nolabel/nolabel_test_15481.txt
[BUG] "no viable conversion " ERROR raised in "tensorflow/core/kernels/eigen_pooling.h" when build v1.4.1 for opencl

System information

OS Platform and Distribution:Linux Ubuntu 17.10
TensorFlow installed from: source
TensorFlow version:1.4.1
Python version: 3.6
Bazel version (if compiling from source):0.8.1
GCC/Compiler version (if compiling from source):7.2

Describe the problem
"no viable conversion " ERROR raised when build v1.4.1 with opencl (computecpp CE 0.5.0)
Source code / logs
ERROR: .../tensorflow/tensorflow/core/kernels/BUILD:3169:1: C++ compilation of rule '//tensorflow/core/kernels:pooling_ops' failed (Exit 1)
In file included from tensorflow/core/kernels/pooling_ops_3d.cc:29:
./tensorflow/core/kernels/eigen_pooling.h:338:12: error: no viable conversion from '__m128' (vector of 4 'float' values) to 'cl::sycl::vec<float, 4>'
Packet skip_mask =
^
./tensorflow/core/kernels/eigen_pooling.h:333:5: note: in instantiation of function template specialization 'Eigen::internal::AvgPoolMeanReducer::reducePacketWithType<cl::sycl::vec<float, 4> >' requested here
reducePacketWithType(static_cast(0), p, accum);
^
external/eigen_archive/unsupported/Eigen/CXX11/src/Tensor/TensorReduction.h:186:15: note: in instantiation of function template specialization 'Eigen::internal::AvgPoolMeanReducer::reducePacket<cl::sycl::vec<float, 4> >' requested here
reducer.reducePacket(self.m_impl.template packet(firstIndex + j), &p);
^
external/eigen_archive/unsupported/Eigen/CXX11/src/Tensor/TensorReduction.h:279:56: note: in instantiation of member function 'Eigen::internal::InnerMostDimReducer<Eigen::TensorEvaluator<const Eigen::TensorReductionOp<Eigen::internal::AvgPoolMeanReducer, const Eigen::IndexList<Eigen::type2index<1>>, const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 3>, const Eigen::TensorVolumePatchOp<-1, -1, -1, const Eigen::TensorMap<Eigen::Tensor<const float, 5, 1, long>, 16, MakePointer> > >, MakePointer>, Eigen::ThreadPoolDevice>, Eigen::internal::AvgPoolMeanReducer, true>::reduce' requested here
InnerMostDimReducer<Self, Op, Vectorizable>::reduce(self, 0, num_coeffs, reducer);
^
external/eigen_archive/unsupported/Eigen/CXX11/src/Tensor/TensorReduction.h:523:48: note: in instantiation of member function 'Eigen::internal::FullReducer<Eigen::TensorEvaluator<const Eigen::TensorReductionOp<Eigen::internal::AvgPoolMeanReducer, const Eigen::IndexList<Eigen::type2index<1>>, const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 3>, const Eigen::TensorVolumePatchOp<-1, -1, -1, const Eigen::TensorMap<Eigen::Tensor<const float, 5, 1, long>, 16, MakePointer> > >, MakePointer>, Eigen::ThreadPoolDevice>, Eigen::internal::AvgPoolMeanReducer, Eigen::ThreadPoolDevice, true>::run' requested here
internal::FullReducer<Self, Op, Device>::run(this, reducer, m_device, data);
^
external/eigen_archive/unsupported/Eigen/CXX11/src/Tensor/TensorMorphing.h:133:19: note: in instantiation of member function 'Eigen::TensorEvaluator<const Eigen::TensorReductionOp<Eigen::internal::AvgPoolMeanReducer, const Eigen::IndexList<Eigen::type2index<1>>, const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 3>, const Eigen::TensorVolumePatchOp<-1, -1, -1, const Eigen::TensorMap<Eigen::Tensor<const float, 5, 1, long>, 16, MakePointer> > >, MakePointer>, Eigen::ThreadPoolDevice>::evalSubExprsIfNeeded' requested here
return m_impl.evalSubExprsIfNeeded(data);
^
external/eigen_archive/unsupported/Eigen/CXX11/src/Tensor/TensorAssign.h:132:24: note: (skipping 2 contexts in backtrace; use -ftemplate-backtrace-limit=0 to see all)
return m_rightImpl.evalSubExprsIfNeeded(m_leftImpl.data());
^
external/eigen_archive/unsupported/Eigen/CXX11/src/Tensor/TensorDevice.h:35:59: note: in instantiation of member function 'Eigen::internal::TensorExecutor<const Eigen::TensorAssignOp<Eigen::TensorMap<Eigen::Tensor<float, 5, 1, long>, 16, MakePointer>, const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 5>, const Eigen::TensorReductionOp<Eigen::internal::AvgPoolMeanReducer, const Eigen::IndexList<Eigen::type2index<1>>, const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 3>, const Eigen::TensorVolumePatchOp<-1, -1, -1, const Eigen::TensorMap<Eigen::Tensor<const float, 5, 1, long>, 16, MakePointer> > >, MakePointer> > >, Eigen::ThreadPoolDevice, true>::run' requested here
internal::TensorExecutor<const Assign, DeviceType>::run(assign, m_device);
^
tensorflow/core/kernels/pooling_ops_3d.cc:108:71: note: in instantiation of function template specialization 'Eigen::TensorDevice<Eigen::TensorMap<Eigen::Tensor<float, 5, 1, long>, 16, MakePointer>, Eigen::ThreadPoolDevice>::operator=<Eigen::TensorReshapingOp<const Eigen::DSizes<long, 5>, const Eigen::TensorReductionOp<Eigen::internal::AvgPoolMeanReducer, const Eigen::IndexList<Eigen::type2index<1>>, const Eigen::TensorReshapingOp<const Eigen::DSizes<long, 3>, const Eigen::TensorVolumePatchOp<-1, -1, -1, const Eigen::TensorMap<Eigen::Tensor<const float, 5, 1, long>, 16, MakePointer> > >, MakePointer> > >' requested here
output->tensor<T, 5>().device(context->eigen_device()) =
^
tensorflow/core/kernels/pooling_ops_3d.cc:194:39: note: in instantiation of member function 'tensorflow::LaunchPoolingOp<Eigen::ThreadPoolDevice, float, tensorflow::PoolingType::AVG>::launch' requested here
LaunchPoolingOp<Device, T, Type>::launch(context, tensor_in, window, stride,
^
tensorflow/core/kernels/pooling_ops_3d.cc:133:12: note: in instantiation of member function 'tensorflow::Pooling3DOp<Eigen::ThreadPoolDevice, float, tensorflow::PoolingType::AVG>::Compute' requested here
explicit Pooling3DOp(OpKernelConstruction context) : UnaryOp(context) {
^
tensorflow/core/kernels/pooling_ops_3d.cc:738:15: note: in instantiation of member function 'tensorflow::Pooling3DOp<Eigen::ThreadPoolDevice, float, tensorflow::PoolingType::AVG>::Pooling3DOp' requested here
TF_CALL_float(REGISTER_CPU_KERNELS);
^
external/local_config_sycl/crosstool/../sycl/include/SYCL/vec.h:9461:3: note: candidate constructor not viable: no known conversion from '__m128' (vector of 4 'float' values) to 'const vec<float, 4> &' for 1st argument
vec(const vec<dataT, kElems> &rhs) {
^
external/local_config_sycl/crosstool/../sycl/include/SYCL/vec.h:9437:3: note: candidate template ignored: could not match 'swizzled_vec<float, kElemsRhs, kIndexRhsN...>' against 'attribute((vector_size(4 * sizeof(float)))) float' (vector of 4 'float' values)
vec(const swizzled_vec<dataT, kElemsRhs, kIndexRhsN...> &rhs) {
^
1 error generated.